number of tiles fix

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="dropdown-items">
                 <div class="nav-element">
                     <label for="tile-cnt">Number of Tiles</label>
-                    <input type="number" id="tile-cnt" value="4">
+                    <input type="number" id="tile-cnt" value="4" min="2">
                 </div>
                 <div class="nav-element">
                     <div class="button" id="save-tiles-btn">Save Image</div>
